--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,10 @@ name: sjfighter
 description: Web Developer from sjfighter
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/sjfighter/sjfighter.github.io/blob/master/images/sj.jpg
+
+
+
 
 #
 # Flags below are optional
