--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ avatar: https://raw.githubusercontent.com/sjfighter/sjfighter.github.io/master/i
 footer-links:
   dribbble:
   email:
-  facebook:
-  flickr:
+  facebook:sjfighter
+  flickr:sjfighter
   github: barryclark/jekyll-now
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
