프로필추가
-이메일
-인스타그램 추가

--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ avatar: https://raw.githubusercontent.com/sjfighter/sjfighter.github.io/master/i
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:sjfighter@nate.com
   facebook:sjfighter
   flickr:sjfighter
-  github: barryclark/jekyll-now
-  instagram:
+  github: sjfighter
+  instagram:sjfighter
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
